--- a/index.html
+++ b/index.html
@@ -9,112 +9,192 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio </a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+    <header class="bline">
+      <div class="main-nav container">
+        <nav class="site-nav">
+          <a href="./index.html" class="logo-link">
+            <span class="logo-web">Web</span>Studio
+          </a>
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Герой -->
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
+      <section class="hero section">
+        <div class="hero container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button">Заказать услугу</button>
+        </div>
       </section>
       <!-- Особенности -->
-      <section class="section">
-        <h2>Особенности</h2>
-        <ul class="features">
-          <li>
-            <h3 class="feature-title">Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
-          <li>
-            <h3 class="feature-title">Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-          </li>
-        </ul>
+      <section class="features section">
+        <div class="features container">
+          <h2 class="visually-hidden">Особенности</h2>
+          <ul class="features list">
+            <li class="feature item">
+              <h3 class="feature-title">Внимание к деталям</h3>
+              <p class="feature-content">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="feature item">
+              <h3 class="feature-title">Пунктуальность</h3>
+              <p class="feature-content">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="feature item">
+              <h3 class="feature-title">Планирование</h3>
+              <p class="feature-content">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="feature item">
+              <h3 class="feature-title">Современные технологии</h3>
+              <p class="feature-content">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Виды деятельности -->
-      <section class="work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img.jpg"
-              alt="Разработка программного обеспечения"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img src="./images/img1.jpg" alt="Дизайн интерфейса" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/img2.jpg" alt="Визуальное оформление" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="work section">
+        <div class="work container">
+          <h2 class="work-title">Чем мы занимаемся</h2>
+          <ul class="work list">
+            <li class="work item">
+              <img
+                src="./images/img.jpg"
+                alt="Разработка программного обеспечения"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work item">
+              <img
+                src="./images/img1.jpg"
+                alt="Дизайн интерфейса"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work item">
+              <img
+                src="./images/img2.jpg"
+                alt="Визуальное оформление"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Команда -->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/img3.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3 class="list-title">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/img4.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="list-title">Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/img5.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3 class="list-title">Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img6.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3 class="list-title">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="team container">
+          <h2 class="main-team title">Наша команда</h2>
+          <ul class="team list">
+            <li class="team item">
+              <img
+                src="./images/img3.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title list">Игорь Демьяненко</h3>
+              <p lang="en" class="team-content">Product Designer</p>
+            </li>
+            <li class="team item">
+              <img
+                src="./images/img4.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title list">Ольга Репина</h3>
+              <p lang="en" class="team-content">Frontend Developer</p>
+            </li>
+            <li class="team item">
+              <img
+                src="./images/img5.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title list">Николай Тарасов</h3>
+              <p lang="en" class="team-content">Marketing</p>
+            </li>
+            <li class="team item">
+              <img
+                src="./images/img6.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title list">Михаил Ермаков</h3>
+              <p lang="en" class="team-content">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"> <span class="logo-web">Web</span>Studio </a>
-      <address>
-        <ul class="list">
-          <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="footer container">
+        <a href="./index.html" class="footer logo">
+          <span class="logo-web">Web</span>Studio
+        </a>
+        <address>
+          <ul class="footer list">
+            <li class="footer-item">
+              <a href="" class="address link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a href="mailto:info@example.com" class="footer link"
+                >info@example.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a href="tel:+380991111111" class="footer link"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
