--- a/portfolio.html
+++ b/portfolio.html
@@ -9,138 +9,185 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio </a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+    <header class="bline">
+      <div class="main-nav container">
+        <nav class="site-nav">
+          <a href="./index.html" class="logo-link"> <span class="logo-web">Web</span>Studio </a>
+          <ul class="site-nav list">
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="portfolio">
-        <h1>Примеры работ</h1>
-        <!-- Фильтр -->
-        <ul class="list">
-          <li><button type="button" class="button primary">Все</button></li>
-          <li><button type="button" class="button primary">Веб-сайты</button></li>
-          <li><button type="button" class="button primary">Приложения</button></li>
-          <li><button type="button" class="button primary">Дизайн</button></li>
-          <li><button type="button" class="button primary">Маркетинг</button></li>
-        </ul>
-        <!-- Примеры работ -->
-        <ul class="list">
-          <li>
-            <a href="">
-              <img src="./images/web.jpg" alt="Веб-сайт" width="370" height="294" />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="inventory">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/poster.jpg"
-                alt="Плакат баскетбольного матча"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="inventory">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/restoran.jpg"
-                alt="Ресторан морской еды"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="inventory">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/headphones.jpg" alt="Наушники" width="370" height="294" />
-              <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
-              <p class="inventory">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
-              <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
-              <p class="inventory">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/inspiration.jpg"
-                alt="Страница веб-сайта"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="inventory">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/magazine.jpg" alt="Журнал" width="370" height="294" />
-              <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="inventory">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/label.jpg"
-                alt="Пример дизайна фирменного знака"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
-              <p class="inventory">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/app.jpg"
-                alt="Приложение для персональных компьютеров"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="portfolio-title">Growing Business</h2>
-              <p class="inventory">Приложение</p>
-            </a>
-          </li>
-        </ul>
+        <div class="portfolio container">
+          <h1 class="visually-hidden">Примеры работ</h1>
+          <!-- Фильтр -->
+          <ul class="filtr list">
+            <li class="filtr item"><button type="button" class="button-primary">Все</button></li>
+            <li class="filtr item">
+              <button type="button" class="button-primary">Веб-сайты</button>
+            </li>
+            <li class="filtr item">
+              <button type="button" class="button-primary">Приложения</button>
+            </li>
+            <li class="filtr item">
+              <button type="button" class="button-primary">Дизайн</button>
+            </li>
+            <li class="filtr item">
+              <button type="button" class="button-primary">Маркетинг</button>
+            </li>
+          </ul>
+          <!-- Примеры работ -->
+          <ul class="exampl list">
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img src="./images/web.jpg" alt="Веб-сайт" width="370" height="294" />
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="inventory">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img
+                  src="./images/poster.jpg"
+                  alt="Плакат баскетбольного матча"
+                  width="370"
+                  height="294"
+                />
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="inventory">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img
+                  src="./images/restoran.jpg"
+                  alt="Ресторан морской еды"
+                  width="370"
+                  height="294"
+                />
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="inventory">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img src="./images/headphones.jpg" alt="Наушники" width="370" height="294" />
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
+                  <p class="inventory">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
+
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="inventory">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="Страница веб-сайта"
+                  width="370"
+                  height="294"
+                />
+                <div class="exampl-content">
+                  <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="inventory">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img src="./images/magazine.jpg" alt="Журнал" width="370" height="294" />
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+                  <p class="inventory">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img
+                  src="./images/label.jpg"
+                  alt="Пример дизайна фирменного знака"
+                  width="370"
+                  height="294"
+                />
+                <div class="exampl-content">
+                  <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+                  <p class="inventory">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="exampl-item">
+              <a href="" class="link">
+                <img
+                  src="./images/app.jpg"
+                  alt="Приложение для персональных компьютеров"
+                  width="370"
+                  height="294"
+                />
+                <div class="exampl-content">
+                  <h2 lang="en" class="portfolio-title">Growing Business</h2>
+                  <p class="inventory">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"> <span class="logo-web">Web</span>Studio </a>
-      <address>
-        <ul class="list">
-          <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="footer container">
+        <a href="./index.html" class="footer logo"> <span class="logo-web">Web</span>Studio </a>
+        <address>
+          <ul class="footer list">
+            <li class="footer-item">
+              <a href="" class="address link">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="footer-item">
+              <a href="mailto:info@example.com" class="footer link">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a href="tel:+380991111111" class="footer link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
